Add test images and hover background change with jquery

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <head>
         <title>ELB</title>
         <link rel="stylesheet" href="index.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script>
+		$(document).ready(function(){
+		    $("a").hover(function(){
+		        $("body").css("background-image", 'url(./images/blod.jpg');
+		        }, function(){
+		        $("body").css("background-image", 'url(./images/swing.jpg');
+		    });
+		});
+		</script>
     </head>
     <body>
         <nav>
@@ -11,8 +21,6 @@
                 <li><a href=#>Phantom Hack</a></li>
                 <li><a href=#>Bunnyhop</a></li>
                 <li><a href=#>Shipwreck (Working Title)</a></li>
-                <li><a href=#>Web Design</a></li>
-                <li><a href=#>Python</a></li>
             </ul>
         </nav>
         
