Adds phantomhack.html
Also changes some CSS structure.

--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
         <nav>
             <ul>
                 <li><a id="email" href="mailto:phantom.dev.elb@gmail.com">Email</a></li>
-                <li><a id="phantomhack" href=#>Phantom Hack</a></li>
+                <li><a id="phantomhack" href="phantomhack.html">Phantom Hack</a></li>
                 <li><a id="bunnyhop" href=#>Bunnyhop</a></li>
                 <li><a id="shipwreck" href=#>Shipwreck (Working Title)</a></li>
             </ul>
         </nav>
-        
-        <header>
-            <h1>ELB MAKES THINGS</h1>
-        </header>
+        <main>
+            <header>
+                <h1>ELB MAKES THINGS</h1>
+            </header>
+        </main>
     </body>
 </html>
